src/assets/css/demo.css
/* ... */
.my-dropdown-metadata.ds option{
  /* background-color: rgb(37, 129, 147,0); */
  position: absolute;
  background-color: #FFFAFA;
  /* border-style: solid; */
  padding: 8px 16px;
  border: 1px solid transparent;
  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
  cursor: pointer;
  user-select: none;
  top: 100%;
  left: 0;
  right: 0;
  z-index: 99;
}

.my-dropdown-metadata.ds:focus {
	border-color: black;
  border-radius: 5px;
  background-color: #FFFAFA;
	/* box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7); */
	/* box-shadow: 0 0 0 3px -moz-mac-focusring; */
	/* color: #222; */
	outline: none;
}

/* Submission file container */
.form-container {
  float: left;
  font-size: 14px;
  /* padding-right: 10px; */
  padding: 4px 6px;
  width: 150px;
  text-align: left;
  vertical-align: middle;
  color: #A0A0A0;
  font: bold;
  font-weight: 500;
}

.form-container-input {
  float: right;
  font-weight: 400;
  /* background-clip: padding-box; */
  line-height: 2;
  width: 100%;
  border: 1px solid #C0C0C0;
  margin-bottom: 10px;
  border-radius: 5px;
  transition: #258193 .25s ease-out;
  padding: 4px 6px;
}

.form-container-input-bf:focus {
  background-color: #FFFAFA;
  border-left: 2px solid #C0C0C0;
  border-radius: 0;
}

.form-container-textarea {
  float: right;
  font-weight: 400;
  /* background-clip: padding-box; */
  /* line-height: 2; */
  font: inherit;
  width: 100%;
  border: 1px solid #C0C0C0;
  border-left: 2px solid #258193;
  margin-bottom: 10px;
  border-radius: 5px;
  transition: #258193 .25s ease-out;
  padding: 4px 6px;
  min-height:60px;
  max-height:60px;
  resize: vertical;
}

.form-container-textarea:focus {
  background-color: #FFFAFA;
  border-left: 2px solid #C0C0C0;
  border-radius: 0;
}

/* BF Add account */
.form-container-input-bf {
  float: right;
  font-weight: 400;
  background-clip: padding-box;
  line-height: 1.5;
  width: 100%;
  margin-bottom: 10px;
  border: 1px solid #C0C0C0;
  border-left: 2px solid #258193;
  border-radius: 5px;
  transition: #258193 .25s ease-out;
  padding: 4px 6px;
}

/* Dataset Description file container */
.form-container-ds{
  float: left;
  font-size: 14px;
  /* padding-right: 10px; */
  padding: 4px 6px;
  width: 180px;
  text-align: left;
  vertical-align: middle;
  color: #A0A0A0;
  font: bold;
  font-weight: 500;
}

.multisteps-form__progress {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
  margin-bottom:30px;
}

.multisteps-form__progress-btn {
  transition-property: all;
  transition-duration: 0.15s;
  transition-timing-function: linear;
  transition-delay: 0s;
  position: relative;
  padding-top: 20px;
  color: #258193;
  text-indent: -9999px;
  border: none;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
}

@media (min-width: 500px) {
  .multisteps-form__progress-btn {
    text-indent: 0;
  }
}
.multisteps-form__progress-btn:before {
  position: absolute;
  top: 0;
  left: 50%;
  display: block;
  width: 15px;
  height: 15px;
  content: '';
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  transition: all 0.15s linear 0s, -webkit-transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
  transition: all 0.15s linear 0s, transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
  transition: all 0.15s linear 0s, transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s, -webkit-transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
  border: 2px solid currentColor;
  border-radius: 50%;
  background-color: #fff;
  box-sizing: border-box;
  z-index: 3;
}
.multisteps-form__progress-btn:after {
  position: absolute;
  top: 5px;
  left: calc(-50% - 13px / 2);
  transition-property: all;
  transition-duration: 0.15s;
  transition-timing-function: linear;
  transition-delay: 0s;
  display: block;
  width: 100%;
  height: 2px;
  content: '';
  background-color: currentColor;
  z-index: 1;
}
.multisteps-form__progress-btn:first-child:after {
  display: none;
}
.multisteps-form__progress-btn.js-active1 {
  color: #258193;
}
.multisteps-form__progress-btn.js-active2 {
  color: #258193;
}
.multisteps-form__progress-btn.js-active1:before {
  -webkit-transform: translateX(-50%) scale(1.2);
  transform: translateX(-50%) scale(1.2);
  background-color: #258193;
}
.multisteps-form__progress-btn.js-active2:before {
  -webkit-transform: translateX(-50%) scale(1.2);
  transform: translateX(-50%) scale(1.2);
  background-color: #258193;
}

/* .ds-dataset-progressbar li {
  list-style-type: none;
  float:left;
  width: 25%;
  position:relative;
  text-align:center;
}

.ds-dataset-progressbar li:before {
  content:counter(step);
  counter-increment: step;
  width: 40px;
  height: 40px;
  line-height: 40px;
  border: 1px solid #f1f1f1;
  display: block;
  text-align: center;
  margin: 0 auto 10px auto;
  border-radius: 50%;
  background-color: #f1f1f1;
}

.ds-dataset-progressbar li::after {
  content:'';
  position: absolute;
  width:100%;
  height:1px;
  background-color: #f1f1f1;
  top:15px;
  left: -50%;
  z-index:-1;
  border-color: yellow;
}

.ds-dataset-progressbar li:first-child:after{
  content: none;
} */
/* .ds-dataset-progressbar li:active{
  background-color: #258193;
} */
/* ... */

